CNCS Dev 12/src/objects/CFDA_Information__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <label>CFDA Number</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CFDA Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>code__c</columns>
        <columns>NAME</columns>
        <columns>CFDA_Number__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CFDA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFDA Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>